<resources>
    <string name="app_name">Minha Agenda</string>
    <string name="title_activity_agenda">AgendaActivity</string>

    <string name="signin">Entrar</string>
    <string name="insert_email">Digite seu email</string>
    <string name="insert_password">Digite sua senha</string>
    <string name="create_acc">Não tem conta ? Cadastre-se!</string>
    <string name="signup">Cadastrar</string>
    <string name="logout">Sair</string>
    <string name="new_contact">Novo contato</string>
    <string name="edit_contact">Editar Contato</string>
    <string name="search">Pesquisar</string>
</resources>