<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.SignupActivity">

    <EditText
        android:id="@+id/edit_signup_email"
        style="@style/custom_edit_text"
        android:hint="@string/insert_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_signup_password"
        style="@style/custom_edit_text"
        android:hint="@string/insert_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSignUp"
        style="@style/custom_button"
        android:text="@string/signup" />
</LinearLayout>

</ScrollView>